--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
@@ -50,14 +50,31 @@
     color: white;
     border: none;
     border-radius: 3px;
+    cursor: pointer;
 }
 .btn_right:hover{
-    cursor: pointer;
     background-color: #b8008a;
 
 }
 .btn_left:hover{
-    cursor: pointer;
     background-color: #0095c7;
 
+}
+
+.boxes{
+    width: fit-content;
+    position: absolute;
+    margin: auto;
+    right: 0;
+    left: 0;
+    top: 400px;
+    text-align: center;
+}
+.boxes_item{
+    float: left;
+    margin-left: 10px;
+    width: 300px ;
+    height: 300px ;
+    background-color: rgb(189, 189, 189);
+    border-radius: 2px;
 }
