--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
@@ -4,7 +4,7 @@
 }
 .navbar{
     width: 100%;
-    height: 90px;
+    height: 15%;
     background-color: rgba(0, 0, 0, 0.849);
     position: absolute;
 }
@@ -20,7 +20,7 @@
     width: fit-content;
     color: white;
     position: absolute;
-    top: 160px;
+    top: 25%;
     left: 50%;
     transform: translate(-50%);
     text-align: center;
@@ -29,7 +29,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%);
-    top: 320px;
+    top: 50%;
     text-align: center;
 }
 .btn_left{
@@ -65,7 +65,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%);
-    top: 400px;
+    top: 65%;
     text-align: center;
 }
 .boxes_item{
