--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
@@ -1,78 +1,109 @@
-*{
+* {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
-.navbar{
+
+.navbar {
     width: 100%;
-    height: 15%;
-    background-color: rgba(0, 0, 0, 0.849);
-    position: absolute;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
 }
-.div_img_home{
-    width: 100%;
-    overflow: auto;
-}
-.img_home{
+
+/* 
+.img_home {
     width: 100%;
     height: 530px;
 }
-.img_home_text{
+
+
+
+ */
+
+.bg-container {
+    background: url(../img/test1.jpg) no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+    /* a unidade de medida vh significa viewer height, ele pega altura do monitor */
+    top: 0;
+    display: flex;
+    /* display flex ajuda a posicionar os elementos no centro de forma responsiva */
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    z-index: -5;
+    /* z-index negativo permite sobrepor elementos no canal alpha */
+}
+
+.img_home_text {
     width: fit-content;
     color: white;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%);
     text-align: center;
 }
-.div_buttons{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: 50%;
-    text-align: center;
+
+.slogan {
+    display: flex;
+    flex-direction: column;
+    /* deixa os elementos um em baixo do outro */
+    justify-content: center;
+    align-items: center;
 }
-.btn_left{
+
+.div_buttons {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* Eu deifini o flex-direction para ficar em linha por padrão, 
+    mas a propriedade flex-wrap faz com que ele se ajuste para coluna 
+    em resoluções menores */
+    justify-content: center;
+}
+
+.btn_left {
     background-color: #00A1D7;
-    
 }
-.btn_right{
-    margin-left: 30px;
+
+.btn_right {
     background-color: #CC0099;
 }
-.btn_left, .btn_right
-{
+
+.btn_left, .btn_right {
     padding: 13px;
+    margin: 10px;
     font-size: medium;
     width: 200px;
     color: white;
     border: none;
     border-radius: 3px;
 }
-.btn_right:hover{
+
+.btn_right:hover {
     cursor: pointer;
     background-color: #b8008a;
-
 }
-.btn_left:hover{
+
+.btn_left:hover {
     cursor: pointer;
     background-color: #0095c7;
-
 }
 
-.boxes{
+.boxes {
     width: fit-content;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: 65%;
-    text-align: center;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-.boxes_item{
-    float: left;
-    margin-left: 10px;
-    width: 300px ;
-    height: 300px ;
+
+.boxes_item {
+    margin: 15px 5px;
+    width: 300px;
+    height: 300px;
     background-color: rgb(189, 189, 189);
     border-radius: 2px;
 }
