--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
@@ -104,6 +104,52 @@
     margin: 15px 5px;
     width: 300px;
     height: 300px;
-    background-color: rgb(189, 189, 189);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    background-color: rgba(189, 189, 189, 0.75);
+    border-radius: 10px;
     border-radius: 2px;
+}
+
+.content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: auto;
+    min-height: 50vh;
+    position: relative;
+    overflow: unset;
+}
+
+.absolute-orientation {
+    position: absolute;
+    top: -150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-container {
+    margin-bottom: 50px;
+}
+
+.box-icon {
+    background-color: #0095c7;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 50%;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.box-text {
+    width: 90%;
+    text-align: center;
 }
