--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
@@ -3,6 +3,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body{
+    height: 200vh;
+}
+
 .navbar {
     width: 100%;
     height: 100px;
@@ -10,20 +14,50 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 0 20px;
+    z-index: 5;
 }
-
-/* 
-.img_home {
-    width: 100%;
-    height: 530px;
+.logo-img{
+    background: url(../img/fer1branco.png) no-repeat;
+    background-size: contain;
+    height: 80%;
+    width: 100px;
+    cursor: pointer;
 }
+.nav-menu{
+    width: fit-content;
+}
+.nav-menu ul{
+    list-style: none;
+}
+.nav-menu ul li{
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-right: 20px;
+}
+.nav-menu ul li a{
+    text-decoration: none;
+    color: #FFF;
+    box-sizing: border-box;
+    overflow: hidden;
+    display: inline-block;
+    transition: 0.15s all ease-in-out ;
+}
+.nav-menu ul li a:hover{
+    text-decoration: none;
+    color: #FFF;
+    border-bottom: 1.5px solid #CC0099;
+    padding-bottom: 10px;
 
-
-
- */
+}
 
 .bg-container {
-    background: url(../img/test1.jpg) no-repeat;
+    background: url(../img/test2.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
     height: 90vh;
@@ -38,7 +72,7 @@
     /* z-index negativo permite sobrepor elementos no canal alpha */
 }
 
-.img_home_text {
+.img-home-text {
     width: fit-content;
     color: white;
     text-align: center;
@@ -52,7 +86,7 @@
     align-items: center;
 }
 
-.div_buttons {
+.div-buttons {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
@@ -63,15 +97,15 @@
     justify-content: center;
 }
 
-.btn_left {
+.btn-left {
     background-color: #00A1D7;
 }
 
-.btn_right {
+.btn-right {
     background-color: #CC0099;
 }
 
-.btn_left, .btn_right {
+.btn-left, .btn-right {
     padding: 13px;
     margin: 10px;
     font-size: medium;
@@ -81,12 +115,12 @@
     border-radius: 3px;
 }
 
-.btn_right:hover {
+.btn-right:hover {
     cursor: pointer;
     background-color: #b8008a;
 }
 
-.btn_left:hover {
+.btn-left:hover {
     cursor: pointer;
     background-color: #0095c7;
 }
@@ -100,7 +134,7 @@
     justify-content: center;
 }
 
-.boxes_item {
+.boxes-item {
     margin: 15px 5px;
     width: 300px;
     height: 300px;
@@ -125,7 +159,7 @@
 
 .absolute-orientation {
     position: absolute;
-    top: -150px;
+    top: -30%;
     display: flex;
     flex-direction: column;
     align-items: center;
