--- a/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional -Home Section/css/style.css
@@ -13,13 +13,14 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #0003;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     padding: 0 20px;
     z-index: 5;
+    transition: 0.4s;
 }
 .logo-img{
     background: url(../img/fer1branco.png) no-repeat;
@@ -30,6 +31,7 @@ body{
 }
 .nav-menu{
     width: fit-content;
+    height: 20%;
 }
 .nav-menu ul{
     list-style: none;
@@ -39,8 +41,10 @@ body{
     flex-direction: row;
     flex-wrap: wrap;
     margin-right: 20px;
+    
 }
 .nav-menu ul li a{
+    
     text-decoration: none;
     color: #FFF;
     box-sizing: border-box;
@@ -51,8 +55,9 @@ body{
 .nav-menu ul li a:hover{
     text-decoration: none;
     color: #FFF;
-    border-bottom: 1.5px solid #CC0099;
-    padding-bottom: 10px;
+    border-bottom: 3px solid #CC0099;
+    padding-bottom: 8px;
+    background-color: #000000A8;
 
 }
 
@@ -186,4 +191,9 @@ body{
 .box-text {
     width: 90%;
     text-align: center;
+}
+@media(max-width: 500px) {
+    .navbar{
+        display: none;
+    }
 }
