sobre nós padding

--- a/Sprint 2/Site Institucional/Site Institucional - About Us/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional - About Us/css/style.css
@@ -75,6 +75,10 @@
             font-size: 23px;
         }
         
+        .box-item {
+            margin: 25px;
+        }
+        
         .box-item img {
             width: 35%;
         }
