--- a/Sprint 2/Site Institucional/Site Institucional - Planos/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional - Planos/css/style.css
@@ -151,18 +151,19 @@ textarea:focus {
     background: url(../img/test2.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     left: 0;
     z-index: -5;
+    background-color: #00000079;
 }
 
 .img-home-text {
     width: fit-content;
-    color: gold;
+    color: rgb(247, 210, 3);
     text-align: center;
 }
 
@@ -209,7 +210,7 @@ textarea:focus {
     height: 100%;
     overflow: hidden;
     border: 1px solid rgb(255, 24, 139);
-    background-color: #ccc;
+    background-color: rgba(255, 255, 255, 0.644);
     position: absolute;
     bottom: 15px;
     left: 15px;
@@ -238,7 +239,7 @@ textarea:focus {
 }
 
 .member-info img {
-    width: 50%;
+    width: 40%;
     transition: transform 0.7s;
     z-index: -1;
 }
