--- a/Sprint 2/Site Institucional/Site Instítucional - Contact/css/style.css
+++ b/Sprint 2/Site Institucional/Site Instítucional - Contact/css/style.css
@@ -151,7 +151,7 @@ textarea:focus {
     background: url(../img/test2.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     top: 0;
     display: flex;
     justify-content: center;
@@ -180,4 +180,8 @@ textarea:focus {
     flex-wrap: wrap;
     justify-content: center;
 }
-
+.footer {
+    background-color: rgb(226, 226, 226, 0.294);;
+    height: 90px;
+    
+}
