--- a/Sprint 2/Site Institucional/Site Instítucional - Contact/css/style.css
+++ b/Sprint 2/Site Institucional/Site Instítucional - Contact/css/style.css
@@ -6,6 +6,7 @@
 
 .Caixa {
     background-color: rgba(226, 226, 226, 0.294);
+    border-radius: 30px;
     position: absolute;
     transform: translate(-50%,-50%);
     top: 50%;
@@ -25,6 +26,7 @@
 
 .Contato h1 {
     color: #403866;
+    margin-bottom: 15px;
 }
 
 .Contato input {
@@ -54,7 +56,7 @@
     border: 2px solid #827ffe;
     background: #827ffe;
     color: white;
-    width: 130px;
+    width: 200px;
     height: 50px;
     outline: none;
     border-radius: 31px;
@@ -64,7 +66,7 @@
 }
 
 .Contato button:hover {
-    width: 150px;
+    width: 230px;
     border: 2px solid white;
     background: white;
     color: blueviolet;
