Junção do site institucional

--- a/Sprint 2/Site Institucional/Site Institucional - About Us/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional - About Us/css/style.css
@@ -27,6 +27,7 @@
             height: 100vh;
             background-image: url(../img/banner_sobre.png);
             background-size: cover;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
         }
         
         .section-sobreNos .container {
