--- a/Sprint 2/Site Institucional/Site Institucional/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional/css/style.css
@@ -25,6 +25,16 @@ body {
     transition: 0.4s;
 }
 
+.black-layer {
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.45);
+}
+
 .logo-img {
     background: url(../img/fer1branco.png) no-repeat;
     background-size: contain;
