--- a/Sprint 2/Site Institucional/Site Institucional/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional/css/style.css
@@ -29,6 +29,28 @@ body {
     transition: 0.4s;
 }
 
+.general-title {
+    color: #00A1D7;
+    width: fit-content;
+    margin: 20px auto;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.general-title h1 {
+    font-size: 30px;
+}
+
+.pink-stroke {
+    margin: auto;
+    background-color: #B8008A;
+    width: 100%;
+    height: 3px;
+    text-align: center;
+    margin-top: 10px;
+    border: none;
+}
+
 .black-layer {
     z-index: 5;
     display: flex;
@@ -237,24 +259,6 @@ body {
     padding-top: 80px;
 }
 
-.section-sobreNos .container h1 {
-    color: #00A1D7;
-    font-size: 30px;
-    margin: auto;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.section-sobreNos .container hr {
-    width: 30%;
-    margin: auto;
-    background-color: #B8008A;
-    width: 20%;
-    text-align: center;
-    padding-bottom: 0.3%;
-    border: none;
-}
-
 .section-sobreNos .container .text {
     width: 90%;
     margin: auto;
@@ -296,25 +300,6 @@ body {
     height: auto;
     padding-top: 30px;
     background-color: #272323;
-}
-
-.section-equipe .container h1 {
-    color: #00A1D7;
-    font-size: 30px;
-    margin: auto;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 1%;
-}
-
-.section-equipe .container hr {
-    width: 15%;
-    margin: auto;
-    margin-bottom: 5%;
-    background-color: #B8008A;
-    text-align: center;
-    padding-bottom: 0.3%;
-    border: none;
 }
 
 .section-equipe .container {
@@ -421,7 +406,6 @@ body {
 .section-servicos {
     width: 100%;
     height: 100%;
-    background-color: black;
     color: blanchedalmond;
     text-align: center;
 }
