--- a/Sprint 2/Site Institucional/Site Institucional/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional/css/style.css
@@ -150,7 +150,8 @@ body {
     background-color: #CC0099;
 }
 
-.btn-left, .btn-right {
+.btn-left,
+.btn-right {
     padding: 13px;
     margin: 10px;
     font-size: medium;
@@ -243,6 +244,7 @@ body {
     }
 }
 
+
 /*Sobre nós - FERNANDO E GIOVANNA*/
 
 .section-sobreNos {
@@ -275,7 +277,7 @@ body {
     text-align: center;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     font-size: 23px;
 }
 
@@ -285,12 +287,13 @@ body {
 }
 
 .section-sobreNos .box-item img {
-    width: 20%;
+    width: 30%;
 }
 
 .section-sobreNos .box-item h3 {
     margin: 13px;
 }
+
 
 /*Equipe - ABNER E MANOCCHIO*/
 
@@ -401,6 +404,7 @@ body {
     }
 }
 
+
 /*Serviços - JHONATAN E LEONARDO*/
 
 .section-servicos {
@@ -409,6 +413,7 @@ body {
     color: blanchedalmond;
     text-align: center;
 }
+
 
 /*Simulador - FERNANDO E GIOVANNA*/
 
@@ -463,7 +468,9 @@ body {
     break-after: auto;
 }
 
-.section-simulador .form-section-simulador .input-form, select, option {
+.section-simulador .form-section-simulador .input-form,
+select,
+option {
     height: 40px;
     width: 30%;
     font-size: 100%;
@@ -568,6 +575,7 @@ body {
     width: 75%
 }
 
+
 /*Contato - JHONATAN E LEONARDO*/
 
 .section-contato .Caixa {
@@ -580,8 +588,6 @@ body {
     text-align: center;
     margin-top: 5%;
 }
-
-.Contato {}
 
 .Contato h1 {
     color: #403866;
