--- a/Sprint 2/Site Institucional/Site Institucional/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional/css/style.css
@@ -59,6 +59,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.45);
+    box-shadow: 0px 6px 25px -2px rgba(0, 0, 0, 0.75);
 }
 
 .logo-img {
@@ -114,6 +115,8 @@ body {
     align-items: center;
     left: 0;
     z-index: -5;
+    background-attachment: fixed;
+    /* dá a impressão da imagem estar se mexendo */
     /* z-index negativo permite sobrepor elementos no canal alpha */
 }
 
