--- a/Sprint 2/Site Institucional/Site Institucional/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional/css/style.css
@@ -153,7 +153,8 @@ body {
     background-color: #CC0099;
 }
 
-.btn-left, .btn-right {
+.btn-left,
+.btn-right {
     padding: 13px;
     margin: 10px;
     font-size: medium;
@@ -246,6 +247,7 @@ body {
     }
 }
 
+
 /*Sobre nós - FERNANDO E GIOVANNA*/
 
 .section-sobreNos {
@@ -294,6 +296,7 @@ body {
 .section-sobreNos .box-item h3 {
     margin: 13px;
 }
+
 
 /*Equipe - ABNER E MANOCCHIO*/
 
@@ -404,6 +407,7 @@ body {
     }
 }
 
+
 /*Serviços - JHONATAN E LEONARDO*/
 
 .section-servicos {
@@ -412,6 +416,7 @@ body {
     color: blanchedalmond;
     text-align: center;
 }
+
 
 /*Simulador - FERNANDO E GIOVANNA*/
 
@@ -466,7 +471,9 @@ body {
     break-after: auto;
 }
 
-.section-simulador .form-section-simulador .input-form, select, option {
+.section-simulador .form-section-simulador .input-form,
+select,
+option {
     height: 40px;
     width: 30%;
     font-size: 100%;
@@ -571,6 +578,7 @@ body {
     width: 75%
 }
 
+
 /*Contato - JHONATAN E LEONARDO*/
 
 .section-contato .Caixa {
@@ -582,6 +590,13 @@ body {
     transition: all 0.25s;
     text-align: center;
     margin-top: 5%;
+    padding-top: 2%;
+}
+
+.Contato {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .Contato h1 {
