--- a/Sprint 2/Site Institucional/Site Institucional/css/style.css
+++ b/Sprint 2/Site Institucional/Site Institucional/css/style.css
@@ -301,6 +301,7 @@ body {
     font-size: 16px;
 }
 
+
 /*Equipe - ABNER E MANOCCHIO*/
 
 .section-equipe {
@@ -479,10 +480,10 @@ body {
 .section-simulador .form-section-simulador .input-form,
 select,
 option {
-    height: 40px;
-    width: 30%;
-    font-size: 100%;
+    height: 35px;
+    width: 65%;
     margin: auto;
+    font-size: 15px;
     background-color: rgb(12, 12, 12);
     border: 3px solid white;
     margin-top: 2%;
@@ -581,6 +582,19 @@ option {
 
 .section-simulador .box-icon img {
     width: 75%
+}
+
+.section-simulador .container-simulator {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-size: 23px;
+}
+
+.section-simulador .colum-simulator {
+    width: 45%;
+    margin: 10px;
 }
 
 
