--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -180,3 +180,66 @@ form.sign-up-form {
     color: var(--p-darker-blue);
     border-color: var(--p-darker-blue);
 }
+
+.panels-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+/*a unidade de medida "fr" fuciona de forma semelhante ao flex-grow, 1fr significa que a coluna vai ocupar 
+    uma fração do espaço disponível, e o repeat aplica isso pra duas colunas, que são respectivamento o left-panel
+    e o right-panel*/
+
+.panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.left-panel {
+    padding: 3rem 17% 2rem 12%;
+}
+
+.right-panel {
+    padding: 3rem 12% 2rem 17%;
+}
+
+.panel .content {
+    color: #fff;
+}
+
+.panel h3 {
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.5rem;
+}
+
+.panel p {
+    font-size: 0.95rem;
+    padding: 0.7rem 0;
+}
+
+.btn.transparent {
+    margin: 0;
+    background: none;
+    border: 2px solid #fff;
+    width: 130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+
+.img {
+    width: 100%;
+}
+
+.right-panel .content, .right-panel .img {
+    transform: translateX(800px);
+}
