--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -26,6 +26,8 @@ na aula de algoritmo
 100 - etra-light
 */
 
+/* quando você passa a transition com apenas dois valores eles são de duração e delay */
+
 .container {
     position: relative;
     width: 100%;
@@ -44,6 +46,8 @@ na aula de algoritmo
     top: -10%;
     right: 48%;
     transform: translateY(-50%);
+    z-index: 6;
+    transition: 1.8s ease-in-out;
 }
 
 .forms-container {
@@ -62,6 +66,8 @@ na aula de algoritmo
     width: 50%;
     display: grid;
     grid-template-columns: 1fr;
+    z-index: 5;
+    transition: 1s 0.7s ease-in-out;
     /*De modo que só apareça um formulário por vez, o container é uma grid com uma coluna*/
 }
 
@@ -74,6 +80,7 @@ form {
     overflow: hidden;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    transition: 0.2s 0.7s ease-in-out;
     /*divide essa única coluna entre duas linahs vertical e horizontalmente para que os formulários fiquem
     um em cima do outro */
 }
@@ -201,18 +208,28 @@ form.sign-up-form {
     align-items: flex-end;
     justify-content: space-around;
     text-align: center;
+    z-index: 7;
 }
 
 .left-panel {
+    pointer-events: all;
     padding: 3rem 17% 2rem 12%;
 }
 
 .right-panel {
+    pointer-events: none;
     padding: 3rem 12% 2rem 17%;
 }
 
+/* os pointer events são todos os eventos referentes ao mouse
+o right-panel fica em cima do formulário de login, fazendo com que
+não seja possível clicar, por isso é necessário setar os pointer-events 
+como none para que ele ignore o right-panel
+*/
+
 .panel .content {
     color: #fff;
+    transition: .9s .6s ease-in-out;
 }
 
 .panel h3 {
@@ -238,8 +255,46 @@ form.sign-up-form {
 
 .img {
     width: 100%;
+    transition: 1.1s 0.3s ease-in-out;
 }
 
 .right-panel .content, .right-panel .img {
     transform: translateX(800px);
+}
+
+/*animações*/
+
+.container.sign-up-mode::before {
+    transform: translate(100%, -50%);
+    right: 52%;
+}
+
+.container.sign-up-mode .left-panel .img, .container.sign-up-mode .left-panel .content {
+    transform: translate(-800px);
+}
+
+.container.sign-up-mode .right-panel .content, .container.sign-up-mode .right-panel .img {
+    transform: translateX(0);
+}
+
+.container.sign-up-mode .left-panel {
+    pointer-events: none;
+}
+
+.container.sign-up-mode .right-panel {
+    pointer-events: all;
+}
+
+.container.sign-up-mode .signin-signup {
+    left: 25%;
+}
+
+.container.sign-up-mode .signin-signup form.sign-in-form {
+    z-index: 1;
+    opacity: 0;
+}
+
+.container.sign-up-mode .signin-signup form.sign-up-form {
+    z-index: 2;
+    opacity: 1;
 }
