--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -298,3 +298,29 @@ como none para que ele ignore o right-panel
     z-index: 2;
     opacity: 1;
 }
+
+.check-container {
+    margin: 10px 0 30px 0;
+    max-width: 380px;
+    padding-left: 10px;
+    width: 100%;
+    height: auto;
+}
+
+.check-option {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 70% 30%;
+    margin: 10px 0;
+}
+
+.checked {
+    color: var(--p-light-blue) !important;
+    transform: scale(1.15) translateX(10%);
+}
+
+.check-option i {
+    color: #aaa;
+    font-size: 20px;
+    transition: 0.5s 0.2s ease-in-out;
+}
