--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -338,6 +338,9 @@ como none para que ele ignore o right-panel
     border: 0.5px solid rgba(0, 0, 0, 0.75);
     z-index: 8;
     box-shadow: 14px 13px 28px -15px rgba(0, 0, 0, 0.75);
+    transform: translateY(-30%);
+    transition: all 0.2s ease-in-out;
+    visibility: hidden;
 }
 
 .error-message:before {
@@ -368,6 +371,11 @@ como none para que ele ignore o right-panel
     color: #94041c;
     font-size: 20px;
     margin: 0 10px;
+}
+
+.error-message.visible {
+    transform: translateY(30%);
+    visibility: visible;
 }
 
 @media screen and (min-width: 2000px) {
