validação de cadastro completa

--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -343,6 +343,10 @@ como none para que ele ignore o right-panel
     visibility: hidden;
 }
 
+#error-message-user {
+    top: 18%;
+}
+
 .error-message:before {
     content: '';
     display: block;
