--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -382,6 +382,55 @@ como none para que ele ignore o right-panel
     visibility: visible;
 }
 
+.alert {
+    display: flex;
+    visibility: hidden;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    align-items: center;
+    height: 50px;
+    width: 420px;
+    padding: 10px 0px 10px 20px;
+    background-color: #98FB98;
+    z-index: 10;
+    transform: translateX(500px);
+    transition: all ease-in-out 0.5s;
+    border-radius: 4px;
+    border-left: 10px solid #3CB371;
+}
+
+.alert.visible {
+    visibility: visible;
+    transform: translateX(0);
+}
+
+.alert i:nth-child(2) {
+    margin-right: 10px;
+    font-size: 25px;
+    color: #3CB371;
+}
+
+.alert p {
+    margin-right: auto;
+    color: #3CB371;
+}
+
+.close-btn {
+    background-color: #3CB371;
+    height: 50px;
+    cursor: pointer;
+    width: 50px;
+    color: #98FB98;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    border-top-right-radius: 4px;
+    font-size: 20px;
+    border-bottom-right-radius: 4px;
+}
+
 @media screen and (min-width: 2000px) {
     .container::before {
         width: 2500px;
