--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -431,6 +431,24 @@ como none para que ele ignore o right-panel
     border-bottom-right-radius: 4px;
 }
 
+#loginAlert {
+    background-color: #ff6961;
+    border-color: #94041c;
+}
+
+#loginAlert i:nth-child(2) {
+    color: #94041c;
+}
+
+#loginAlert p {
+    color: #94041c;
+}
+
+#loginAlert .close-btn {
+    background-color: #94041c;
+    color: #ff6961;
+}
+
 @media screen and (min-width: 2000px) {
     .container::before {
         width: 2500px;
