--- a/Sprint 2/Site Institucional/Site Institucional/src/css/dashboard.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/dashboard.css
@@ -1,48 +1,45 @@
 /*----------Variaveis CSS--------------*/
-:root{
+
+:root {
     --header-height: 4rem;
     --nav-width: 68px;
-/*------------CORES------------*/
-
+    /*------------CORES------------*/
     --first-color: #3e3e3f88;
     --first-color-light: #AFA5D9;
     --gray-color: #51585C;
     --white-color: #F7F6FB;
     --blue-color: #00A3FA;
-
-/*------------FONTES E TIPOGRAFIA------------*/
-
+    /*------------FONTES E TIPOGRAFIA------------*/
     --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
-
-/*------------Z-INDEX------------*/
-
-    --z-fixed:100;
+    /*------------Z-INDEX------------*/
+    --z-fixed: 100;
 }
 
 /*------------BASES------------*/
 
-*, ::before, ::after{
+*, ::before, ::after {
     box-sizing: border-box;
 }
+
 ::-webkit-scrollbar-track {
     background-color: #51585C;
 }
 
- ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
     height: 8px;
     background: #51585C;
 }
 
- ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #00A1D7;
 }
 
-body{
+body {
     position: relative;
     background-color: #eeeeeef5;
-    margin: var(--header-height)0 0 0;
+    /* margin: var(--header-height)0 0 0; */
     padding: 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
@@ -50,13 +47,14 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
 /*------------HEADER------------*/
 
-.header{
+/* 
+.header {
     width: 100%;
     height: var(--header-height);
     top: 0;
@@ -67,14 +65,16 @@ a{
     padding: 0 1rem;
     z-index: var(--z-fixed);
     transition: .5s;
-}
-.header p{
+} */
+
+.header p {
     font-weight: 600;
     font-size: 16px;
     text-transform: uppercase;
     color: var(--blue-color);
 }
-.header_img{
+
+.header_img {
     width: 40px;
     height: 40px;
     display: flex;
@@ -84,13 +84,13 @@ a{
     margin-left: 75%;
 }
 
-.header_img img{
+.header_img img {
     width: 40px;
 }
 
 /*------------HEADER------------*/
 
-.l-navbar{
+.l-navbar {
     position: fixed;
     top: 0;
     left: 0;
@@ -102,7 +102,7 @@ a{
     z-index: var(--z-fixed);
 }
 
-.nav{
+.nav {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -110,44 +110,47 @@ a{
     overflow: hidden;
 }
 
-.nav_logo img{
+.nav_logo img {
     width: 25px;
 }
-.nav_logo, 
-.nav_link{
-    display: grid; /*Torna o elemento um grid container.*/
-    grid-template-columns: max-content max-content; /*Define os nomes das linhas e funções de dimensionamento (tamanho da trilha) nas colunas da grade .*/
+
+.nav_logo, .nav_link {
+    display: grid;
+    /*Torna o elemento um grid container.*/
+    grid-template-columns: max-content max-content;
+    /*Define os nomes das linhas e funções de dimensionamento (tamanho da trilha) nas colunas da grade .*/
     align-items: center;
-    column-gap: 1rem; /*Define o tamanho da lacuna entre as colunas de um elemento.*/
-    padding: .5rem  0 .5rem 1.5rem;
+    column-gap: 1rem;
+    /*Define o tamanho da lacuna entre as colunas de um elemento.*/
+    padding: .5rem 0 .5rem 1.5rem;
 }
 
-.nav_logo{
+.nav_logo {
     margin-bottom: 2rem;
 }
 
-.nav_logo-icon{
+.nav_logo-icon {
     font-size: 1.25rem;
     color: var(--white-color);
 }
 
-.nav_logo-name{
+.nav_logo-name {
     color: var(--white-color);
     font-weight: 700;
 }
 
-.nav_link{
+.nav_link {
     position: relative;
     color: var(--first-color-light);
     margin-bottom: 1.5rem;
     transition: .3s;
 }
 
-.nav_link:hover{
+.nav_link:hover {
     color: var(--white-color);
 }
 
-.nav_icon{
+.nav_icon {
     font-size: 1.25rem;
 }
 
@@ -172,6 +175,7 @@ a{
     margin-top: 10px;
     border: none;
 }
+
 .page-salas .boxes {
     width: fit-content;
     height: auto;
@@ -198,9 +202,11 @@ a{
     background-color: #0b98c756;
     border-radius: 10px;
     color: #34383a;
+    transition: 0.15s;
 }
 
-.page-salas .boxes-item:hover{
+.page-salas .boxes-item:hover {
+    cursor: pointer;
     box-shadow: 3px 3px 3px #51585C;
 }
 
@@ -208,39 +214,40 @@ a{
     margin-bottom: 50px;
 }
 
-
 .page-salas .box-text {
     width: 90%;
     margin-top: -5%;
     text-align: justify;
     color: #34383a;
 }
-.page-salas .box-text .alerta{
-   color: rgb(223, 209, 11);
+
+.page-salas .box-text .alerta {
+    color: rgb(223, 209, 11);
 }
 
-.page-salas .box-text .ideal{
+.page-salas .box-text .ideal {
     color: green;
- }
+}
 
- .page-salas .box-text .critico{
+.page-salas .box-text .critico {
     color: darkred;
- }
+}
 
-.page-salas .box-text  .temperatura{
+.page-salas .box-text .temperatura {
     color: rgb(248, 117, 10);
     font-size: 22px;
 }
 
-.page-salas .box-text  .umidade{
+.page-salas .box-text .umidade {
     color: rgb(42, 12, 124);
     font-size: 22px;
 }
 
-.page-salas .box-text  .luminosidade{
+.page-salas .box-text .luminosidade {
     color: rgb(226, 193, 6);
     font-size: 22px;
 }
+
 .page-salas .box-icon img {
     width: 75%
 }
