--- a/Sprint 2/Site Institucional/Site Institucional/src/css/sala.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/sala.css
@@ -16,17 +16,17 @@
     height: 95vh;
     width: 90%;
     margin-left: 55px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: row;
     position: relative;
+    flex-wrap: wrap;
 }
 
 .panel {
     background-color: rgba(255, 255, 255, 0.884);
     border-radius: 10px;
-    max-width: 100%;
-    min-width: 30%;
-    min-height: 40%;
+    min-width: 40%;
+    flex: 2;
     display: flex;
     align-items: center;
     margin: 2px;
@@ -56,4 +56,10 @@
 .panel:nth-child(4) {
     border-top-right-radius: 0px !important;
     border-bottom-left-radius: 0px !important;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
