--- a/Sprint 2/Site Institucional/Site Institucional/src/css/sala.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/sala.css
@@ -26,6 +26,7 @@
     background-color: rgba(255, 255, 255, 0.884);
     border-radius: 10px;
     min-width: 40%;
+    width: 40%;
     flex: 2;
     display: flex;
     align-items: center;
@@ -56,10 +57,4 @@
 .panel:nth-child(4) {
     border-top-right-radius: 0px !important;
     border-bottom-left-radius: 0px !important;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
 }
