--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/dashboard.css
@@ -18,9 +18,12 @@
     --z-fixed: 100;
 }
 
+
 /*------------BASES------------*/
 
-*, ::before, ::after {
+*,
+ ::before,
+ ::after {
     box-sizing: border-box;
 }
 
@@ -53,7 +56,9 @@ a {
     text-decoration: none;
 }
 
+
 /*------------HEADER------------*/
+
 
 /* 
 .header {
@@ -90,6 +95,7 @@ a {
     width: 40px;
 }
 
+
 /*------------HEADER------------*/
 
 .l-navbar {
@@ -117,7 +123,8 @@ a {
     width: 25px;
 }
 
-.nav_logo, .nav_link {
+.nav_logo,
+.nav_link {
     display: grid;
     /*Torna o elemento um grid container.*/
     grid-template-columns: max-content max-content;
@@ -177,6 +184,10 @@ a {
     text-align: center;
     margin-top: 10px;
     border: none;
+}
+
+.page-salas {
+    text-align: center;
 }
 
 .page-salas .boxes {
@@ -290,10 +301,14 @@ a {
 }
 
 .rooms-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 3%;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; */
+    display: flex;
+    width: 105%;
+    padding: 1em 4em;
     align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-flow: row wrap;
+    margin: 0 0 0 45px;
+    /* margin: 0 auto; */
 }
